@startuml conceptual-model-initial
' WBHC 2027 - Conceptual Data Model (Initial Iteration)

skinparam classAttributeIconSize 0
skinparam classBackgroundColor #FEFEFE
skinparam classBorderColor #555555
skinparam shadowing false
skinparam linetype ortho
hide circle

title WBHC 2027 - Conceptual Data Model (Initial)

class Event {
  <<PK>> eventId
  name
  startDate
  endDate
  location
}

class Round {
  <<PK>> roundId
  roundNumber
  roundType
  date
}

class Range {
  <<PK>> rangeId
  rangeName
}

class TargetStation {
  <<PK>> targetId
  targetNumber
  targetGroup
  maxDistance
}

class Participant {
  <<PK>> participantId
  firstName
  lastName
  birthDate
  gender
}

class Nation {
  <<PK>> nationCode
  nationName
}

class Club {
  <<PK>> clubId
  clubName
}

class Registration {
  <<PK>> registrationId
  shootingStyle
  division
  classification
  feePaid
  equipmentChecked
}

class StartGroup {
  <<PK>> groupId
  groupNumber
  startTargetNumber
}

class ScoreCard {
  <<PK>> scoreCardId
  cardDate
  /roundTotal
}

class ShotResult {
  <<PK>> shotId
  arrowNumber
  hitZone
  pointValue
}

class Official {
  <<PK>> officialId
  firstName
  lastName
  function
}

class Protest {
  <<PK>> protestId
  date
  description
  decision
}

class TieBreak {
  <<PK>> tieBreakId
  date
  resolution
}

class TournamentResult {
  <<PK>> resultId
  /totalPoints
  /rankPosition
}

Event "1" *-- "1..*" Round
Round "1..*" -- "1..*" Range
Range "1" *-- "28" TargetStation

Participant "1" -- "0..*" Registration
Registration "*" -- "1" Event
Participant "*" -- "1" Nation
Participant "0..*" -- "0..1" Club

StartGroup "*" -- "1" Round
StartGroup "*" -- "1" Range
StartGroup "1" -- "3..6" Registration

ScoreCard "*" -- "1" Registration
ScoreCard "*" -- "1" Round
ScoreCard "1" *-- "*" ShotResult
ShotResult "*" -- "1" TargetStation

Official "*" -- "0..*" Range
Official "1" -- "0..*" Protest
Protest "*" -- "1" Participant

TieBreak "*" -- "2..*" Registration
TournamentResult "1" -- "1" Registration

@enduml
